@@ -35,8 +35,6 @@
 #include <QFile>
 #include <QTextStream>
 #include <QVBoxLayout>
-#include <QTextCodec>
-#include <QDomDocument>
 #include <QUrlQuery>
 
 namespace {
@@ -75,12 +73,7 @@ QUrl DVDFrFetcher::searchUrl() {
   QUrlQuery q;
   switch(request().key()) {
     case Title:
-      // DVDfr requires the title string to be in iso-8859-15
-      {
-        QTextCodec* codec = QTextCodec::codecForName("iso-8859-15");
-        Q_ASSERT(codec);
-        q.addQueryItem(QStringLiteral("title"), QString::fromUtf8(codec->fromUnicode(request().value())));
-      }
+      q.addQueryItem(QStringLiteral("title"), request().value());
       break;
 
     case UPC:
