@@ -1,3 +1,7 @@
+2024-03-09  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed DVDFr searches with title accents.
+
 2024-01-24  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug for entry selection after changing group field (Bug 480297).
